// Copyright Â© 2020-2022 The Trustix Authors
//
// SPDX-License-Identifier: MIT

syntax = "proto2";

option go_package = "github.com/nix-community/trustix/packages/trustix-proto/schema";

message MapEntry {
  // Value digest of tree node
  required bytes Digest = 1;

  // Index of value in log
  required uint64 Index = 2;
}
